End to end project completed

--- a/research/5_model_evaluation.ipynb
+++ b/research/5_model_evaluation.ipynb
@@ -16,8 +16,8 @@
    "outputs": [],
    "source": [
     "os.environ['MLFLOW_TRACKING_URI']='https://dagshub.com/saikiven03/DS_Project1.mlflow'\n",
-    "os.environ['MLFLOW_TRACKING_USERNAME']='saikiven03'\n",
-    "os.environ['MLFLOW_TRACKING_PASSWORD']='7c0e76b0f174dd060d5f14dafb6d79494ef83cfa'"
+    "os.environ['MLFLOW_TRACKING_USERNAME']='saik'\n",
+    "os.environ['MLFLOW_TRACKING_PASSWORD']='7c0e76b0f174dd060d5f14dafb6d79494ef'"
    ]
   },
   {
